load all sprites, maps

--- a/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
+++ b/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="BaseObject.h" />
     <ClInclude Include="Bat.h" />
     <ClInclude Include="Bird.h" />
+    <ClInclude Include="Boss.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Butterfly.h" />
     <ClInclude Include="Camera.h" />
@@ -189,6 +190,7 @@
     <ClCompile Include="BaseObject.cpp" />
     <ClCompile Include="Bat.cpp" />
     <ClCompile Include="Bird.cpp" />
+    <ClCompile Include="Boss.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Butterfly.cpp" />
     <ClCompile Include="Camera.cpp" />
