update SittingMan,  RunningMan, Boss, ShotEffect

--- a/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
+++ b/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="RedBird.h" />
     <ClInclude Include="RunningMan.h" />
     <ClInclude Include="ScoreBar.h" />
+    <ClInclude Include="ShotEffect.h" />
     <ClInclude Include="Shuriken.h" />
     <ClInclude Include="SittingMan.h" />
     <ClInclude Include="Soldier.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="Throwman.h" />
     <ClInclude Include="Tilemap.h" />
     <ClInclude Include="Weapon.h" />
+    <ClInclude Include="WeaponSittingMan.h" />
     <ClInclude Include="WindmillShuriken.h" />
     <ClInclude Include="WindowGame.h" />
   </ItemGroup>
@@ -227,6 +229,7 @@
     <ClCompile Include="RedBird.cpp" />
     <ClCompile Include="RunningMan.cpp" />
     <ClCompile Include="ScoreBar.cpp" />
+    <ClCompile Include="ShotEffect.cpp" />
     <ClCompile Include="Shuriken.cpp" />
     <ClCompile Include="SittingMan.cpp" />
     <ClCompile Include="Soldier.cpp" />
@@ -237,6 +240,7 @@
     <ClCompile Include="Throwman.cpp" />
     <ClCompile Include="Tilemap.cpp" />
     <ClCompile Include="Weapon.cpp" />
+    <ClCompile Include="WeaponSittingMan.cpp" />
     <ClCompile Include="WindmillShuriken.cpp" />
     <ClCompile Include="WindowGame.cpp" />
     <ClCompile Include="Main.cpp" />
