--- a/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj.filters
+++ b/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj.filters
@@ -147,13 +147,25 @@
     <ClCompile Include="MapManager.cpp">
       <Filter>MapManager</Filter>
     </ClCompile>
-    <ClCompile Include="RunningMan.cpp" />
-    <ClCompile Include="SittingMan.cpp" />
-    <ClCompile Include="ItemWindmillShuriken.cpp" />
     <ClCompile Include="RedBird.cpp">
       <Filter>Enemy</Filter>
     </ClCompile>
     <ClCompile Include="Boss.cpp" />
+    <ClCompile Include="SittingMan.cpp">
+      <Filter>Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="ItemWindmillShuriken.cpp">
+      <Filter>Item</Filter>
+    </ClCompile>
+    <ClCompile Include="ShotEffect.cpp">
+      <Filter>Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="WeaponSittingMan.cpp">
+      <Filter>Weapon and Subweapon</Filter>
+    </ClCompile>
+    <ClCompile Include="RunningMan.cpp">
+      <Filter>Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -299,13 +311,25 @@
     <ClInclude Include="MapManager.h">
       <Filter>MapManager</Filter>
     </ClInclude>
-    <ClInclude Include="RunningMan.h" />
-    <ClInclude Include="SittingMan.h" />
-    <ClInclude Include="ItemWindmillShuriken.h" />
     <ClInclude Include="RedBird.h">
       <Filter>Enemy</Filter>
     </ClInclude>
     <ClInclude Include="Boss.h" />
+    <ClInclude Include="SittingMan.h">
+      <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="ItemWindmillShuriken.h">
+      <Filter>Item</Filter>
+    </ClInclude>
+    <ClInclude Include="ShotEffect.h">
+      <Filter>Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="WeaponSittingMan.h">
+      <Filter>Weapon and Subweapon</Filter>
+    </ClInclude>
+    <ClInclude Include="RunningMan.h">
+      <Filter>Enemy</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Animation">
