--- a/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj.filters
+++ b/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj.filters
@@ -166,6 +166,8 @@
     <ClCompile Include="RunningMan.cpp">
       <Filter>Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="GridTree.cpp" />
+    <ClCompile Include="GridNode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -330,6 +332,8 @@
     <ClInclude Include="RunningMan.h">
       <Filter>Enemy</Filter>
     </ClInclude>
+    <ClInclude Include="GridTree.h" />
+    <ClInclude Include="GridNode.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Animation">
