Thêm sound cho boss, fix hiệu ứng boss,hoàn thành sound

--- a/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
+++ b/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="ItemWindmillShuriken.h" />
     <ClInclude Include="KEY.h" />
     <ClInclude Include="Knife.h" />
+    <ClInclude Include="Ladder.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="MapManager.h" />
     <ClInclude Include="Panther.h" />
@@ -231,6 +232,7 @@
     <ClCompile Include="ItemWindmillShuriken.cpp" />
     <ClCompile Include="KEY.cpp" />
     <ClCompile Include="Knife.cpp" />
+    <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="MapManager.cpp" />
     <ClCompile Include="Panther.cpp" />
     <ClCompile Include="PhysicsObject.cpp" />
