--- a/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
+++ b/Game/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
@@ -153,7 +153,7 @@
     <ClInclude Include="GameTime.h" />
     <ClInclude Include="GameUtils.h" />
     <ClInclude Include="GridNode.h" />
-    <ClInclude Include="GridTree.h" />
+    <ClInclude Include="Grid.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemBonusBlue.h" />
     <ClInclude Include="ItemBonusRed.h" />
@@ -219,7 +219,7 @@
     <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="GameUtils.cpp" />
     <ClCompile Include="GridNode.cpp" />
-    <ClCompile Include="GridTree.cpp" />
+    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="ItemBonusBlue.cpp" />
     <ClCompile Include="ItemBonusRed.cpp" />
