--- a/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
+++ b/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj
@@ -152,7 +152,7 @@
     <ClInclude Include="GameTexture.h" />
     <ClInclude Include="GameTime.h" />
     <ClInclude Include="GameUtils.h" />
-    <ClInclude Include="GridNode.h" />
+    <ClInclude Include="Cell.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemBonusBlue.h" />
@@ -218,7 +218,7 @@
     <ClCompile Include="GameTexture.cpp" />
     <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="GameUtils.cpp" />
-    <ClCompile Include="GridNode.cpp" />
+    <ClCompile Include="Cell.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="ItemBonusBlue.cpp" />
