--- a/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj.filters
+++ b/Game Ninja Gaiden/Game Ninja Gaiden.vcxproj.filters
@@ -166,7 +166,6 @@
     <ClCompile Include="RunningMan.cpp">
       <Filter>Enemy</Filter>
     </ClCompile>
-    <ClCompile Include="GridNode.cpp" />
     <ClCompile Include="Sound.cpp">
       <Filter>Sound</Filter>
     </ClCompile>
@@ -179,6 +178,7 @@
     </ClCompile>
     <ClCompile Include="Ladder.cpp" />
     <ClCompile Include="Grid.cpp" />
+    <ClCompile Include="Cell.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -343,7 +343,6 @@
     <ClInclude Include="RunningMan.h">
       <Filter>Enemy</Filter>
     </ClInclude>
-    <ClInclude Include="GridNode.h" />
     <ClInclude Include="Sound.h">
       <Filter>Sound</Filter>
     </ClInclude>
@@ -356,6 +355,7 @@
     </ClInclude>
     <ClInclude Include="Ladder.h" />
     <ClInclude Include="Grid.h" />
+    <ClInclude Include="Cell.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Animation">
